[package]
name = "dbgm"
version = "0.1.0"
authors = ["AlphaModder"]
publish = false
edition = "2018"

[dependencies]
gfx = "0.18"
gfx_window_glutin = "0.30"
gfx_device_gl = "0.16.0"
glutin = "0.20"
imgui = { version = "0.0.24-pre", git = "https://github.com/Gekkio/imgui-rs" }
imgui-winit-support = { version = "0.0.24-pre", git = "https://github.com/Gekkio/imgui-rs" }
imgui-gfx-renderer = { version = "0.0.24-pre", git = "https://github.com/Gekkio/imgui-rs" }

winapi = { path = "../winapi-rs/", features = ["shobjidl_core", "combaseapi", "objbase", "winnt"] }
image = "0.21.0"
nfd = "0.0.4"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"

