[package]
name = "dbgm"
version = "0.1.0"
authors = ["AlphaModder"]
publish = false
edition = "2018"
license = "MIT"

[features]
default = ["opengl"]
opengl = []

[dependencies]
gfx = "0.18"
gfx_device_gl = "0.16"
gfx_window_glutin = "0.31"
glutin = "0.21"
image = "0.23"
imgui = "0.2"
imgui-gfx-renderer = "0.2"
imgui-winit-support = "0.2"

nfd = "0.0.4"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
enum_dispatch = "0.1.4"
blake2 = "0.8.1"
bitflags = "1.2.1"
stable-vec = "0.4.0"
inventory = "0.1.4"
erased-serde = "0.3.9"
base64 = "0.11.0"

[dependencies.winapi]
git = "https://github.com/retep998/winapi-rs.git"
branch = "0.3"
features = ["shobjidl_core", "combaseapi", "objbase", "winnt", "winuser"] 
